--- a/student-frontend/src/Home.css
+++ b/student-frontend/src/Home.css
@@ -15,7 +15,7 @@ body {
 .hero-section {
     text-align: center;
     padding: 20px 5px;
-    background: linear-gradient(135deg, #396056, #3d3d66, #68687a);
+    background: linear-gradient(135deg, #17b08a, #285c4c, #101019);
         color: #fff;
     border-radius: 10px;
     margin-top: 80px;
@@ -40,7 +40,7 @@ body {
 }
 
 .feature {
-    background: white;
+background: linear-gradient(135deg, #ddebe7, #fafafe, #eeeef5);
     padding: 15px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     width: 45%;
@@ -78,6 +78,25 @@ body {
     text-align: center;
     color: #007bff;
     font-weight: bold;
+}
+.b1{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+.l1{
+    text-decoration: none;
+    background-color: #007bff; 
+    color: #ddebe7;
+    padding: 10px;
+    width: 120px;
+    border-radius: 20px;
+    font-size: medium;
+}
+.l1:hover {
+    background-color: #2c3bdd;
+    color: #ffffff;
+    transform: translateY(-2px);
 }
 
 /* Media Queries for Mobile View */
